--- a/fr/html/libs/ioextra/explarom.html
+++ b/fr/html/libs/ioextra/explarom.html
@@ -32,7 +32,7 @@
               <strong>Introduction :</strong>
             </td>
             <td>
-              2.15 in Logisim ITA Component
+              2.15 dans Logisim ITA Component
             </td>
           </tr>
           <tr>
@@ -53,17 +53,18 @@
 	  Il existe dans la librairie Entrée/Sortie un composant PLA différent plus organisé comme une ROM. 
       </p>
 	  <p>
-	  Après avoir défini le nombre de lignes en entrée avec l'attribut <b class="property">Largeur de donnée en entrée</b> et le nombre de lignes en sortie avec l'attribut <b class="property">Largeur de donnée en sortie</b> vous pouvez activer cette fenêtre en cliquant sur la propriété <b class="property">Contenu</b> en effectuant un clic droit sur le PLA pour ouvrir le menu contextuel et sélectionnez le menu <b class="menu">|&nbsp;| Modifier le contenu |</b>. 
+	  Après avoir défini le nombre de lignes en entrée avec l'attribut <b class="property">Largeur de donnée en entrée</b> et le nombre de lignes en sortie avec l'attribut <b class="property">Largeur de donnée en sortie</b> vous pouvez activer cette fenêtre en cliquant sur la propriété <b class="property">Contenu</b> en effectuant un clic droit sur le PLA pour ouvrir le menu contextuel et sélectionnez le menu <b class="menu">|&nbsp;Modifier le contenu&nbsp;|</b>. 
 	  </p>
 	  <p>
 	   <img class="notscal" src="../../../img-libs/plaeditor2.png" alt="#########"><br>
 	  </p>
 	  <p>
-	  Ce circuit est réaliser pour calculer la somme des minterms d'une fonction . Dans la matrice de gauche,vous pouvez cliquer sur les intersections pour connecter les valeurs ou leur complément aux portes AND pour construir les minterms.
+	  Ce circuit est construit pour calculer la somme des minterms d'une fonction . Dans la matrice de gauche,vous pouvez cliquer sur les intersections pour connecter les valeurs ou leur complément aux portes AND pour construir les minterms.
 	  </p>
 	  <p>
-	  Par exemple dans la figure ci-dessus la première ligne à gauche est programmée pour effectuer le minterms de </span> <img class="intxt1" src="../../../../img-libs/mint0.png" alt="#########"> et pour la seconde ligne <img class="intxt1" src="../../../../img-libs/mint1.png" alt="#########">. 
-	  <br>Le panneau représente une version simplifiée du schéma, vous devez comprendre le résultat de la programmation des deux premières lignes comme celui-ci</p><p>
+	  Par exemple dans la figure ci-dessus la première ligne à gauche est programmée pour effectuer le minterms de <img class="intxt1" src="../../../../img-libs/mint0.png" alt="#########"> et pour la seconde ligne <img class="intxt1" src="../../../../img-libs/mint1.png" alt="#########">. 
+	  <br>Le panneau représente une version simplifiée du schéma, vous devez comprendre le résultat de la programmation des deux premières lignes comme celui-ci</p>
+	  <p>
 	  <img class="notscal" src="../../../../img-libs/plaeditor3.png" alt="#########"></p>
 	  <p>
 	  Dans la matrice de droite, vous cliquez aux intersections pour préciser les fonctions dont vous désirez realiser la somme avec les portes OR. Comme précédemment le panneau simplifie le schema et il faut voir des portes OR avec de multiples entrées.
@@ -102,7 +103,7 @@
          Nombre de portes ET
         </dt>
         <dd>
-          Définis le nombre de portes ET, c'est le nombre de mintermes utilisés pour la fournir la solution des fonctions.
+          Définis le nombre de portes ET, il est égale au nombre de mintermes utilisés pour la fournir la solution des fonctions.
         </dd>
         <dt class="lib">
           Largeur de donnée en sortie
@@ -138,7 +139,7 @@
           Polarité du sélect
         </dt>
         <dd>
-          Détermine si le signal Select active le PLA au niveau haut (1) ou au niveau bas (0)
+          Détermine si le signal Select active le PLA au niveau haut (<b class="unov">1</b>) ou au niveau bas (<b class="zerov">0</b>)
         </dd>
       </dl>
 	  </div>
