--- a/docstatus.html
+++ b/docstatus.html
@@ -1529,11 +1529,11 @@
 	</tr>
 	<!-- **************** -->
 	<tr>
-		<td height="17" align="left"></td>
+		<td height="17" class="good" align="center">3.9</td>
 		<td align="left"></td>
 		<td align="left" class="title" colspan="2">JAR libraries</td>
 		<td align="left"></td>
-		<td align="center" class="good"><a href="./en/html/guide/jar/index.html">__</a></td>
+		<td align="center" class="good"><a href="./en/html/guide/jar/index.html">_V</a></td>
 		<td align="center" class="good"><a href="./fr/html/guide/jar/index.html">_V</a></td>
 		<td align="center" class="good"><a href="./de/html/guide/jar/index.html">__</a></td>
 		<td align="center" class="good"><a href="./pt/html/guide/jar/index.html">__</a></td>
@@ -1545,16 +1545,16 @@
 		<td align="center"></td>
 	</tr>
 	<tr>
-		<td height="17" align="left"></td>
+		<td height="17" class="good" align="center">3.9</td>
 		<td align="left"></td>
 		<td align="left"></td>
 		<td align="left">Gray Code Incrementer</td>
 		<td align="left"></td>
-		<td align="center" class="good"><a href="./en/html/guide/jar/incr.html">__</a></td>
+		<td align="center" class="good"><a href="./en/html/guide/jar/incr.html">_V</a></td>
 		<td align="center" class="good"><a href="./fr/html/guide/jar/incr.html">_V</a></td>
-		<td align="center" class="good"><a href="./de/html/guide/jar/incr.html">__</a></td>
+		<td align="center" class="needtask"><a href="./de/html/guide/jar/incr.html">__</a></td>
 		<td align="center" class="good"><a href="./pt/html/guide/jar/incr.html">__</a></td>
-		<td align="center" class="good"><a href="./ru/html/guide/jar/incr.html">__</a></td>
+		<td align="center" class="needtask"><a href="./ru/html/guide/jar/incr.html">__</a></td>
 		<td align="center" class="good"><a href="./he/html/guide/jar/incr.html">__</a></td>
 		<td align="center"></td>
 		<td align="center"></td>
