--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <h2>
   Documentation resources
 </h2>
-  <a href="D:\Users\mbaillif\Documents\GitHub\Logisim-evolution-documentation\xresourcesfordoc\Indexer">Document indexer for keyword searches</a>
+  <a href="./xresourcesfordoc/Indexer">Document indexer for keyword searches</a>
 <h2>
   
 </h2>
