--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <a href="./pt/html/guide/index.html">User Guide PT Portugese / Português. Guia para se tornar usuário do Logisim-evolution</a><br><br>
 <a href="./ru/html/guide/index.html">User Guide RU Russian /Русский. Руководство "Как стать пользователем Logisim-evolution" </a><br><br>
 <a href="./he/html/guide/index.html">User Guide HE Hebreu  עברית. המדריך למש Logisim-evolution  </a><br><br>
-<a href="./he/html/guide/index.html">User Guide ZH Chinese / 中文 Logisim-evolution 用户指南  </a><br><br>
+<a href="./zh/html/guide/index.html">User Guide ZH Chinese / 中文 Logisim-evolution 用户指南  </a><br><br>
 <h2>
   <a href="./libstatus.html">Logisim-evolution Library libs Status</a><br>
 </h2>
@@ -31,7 +31,7 @@
 <a href="./pt/html/libs/index.html">Library Reference PT Portugese / Português. Referências para bibliotecas</a><br><br>
 <a href="./ru/html/libs/index.html">Library Reference RU Russian /Русский. Справка по библиотеке</a><br><br>
 <a href="./he/html/libs/index.html">Library Reference HE Hebreu הפניה לספרייה </a><br><br>
-<a href="./he/html/libs/index.html">Library Reference ZH Chinese / 中文  电路元件库手册 </a><br><br>
+<a href="./zh/html/libs/index.html">Library Reference ZH Chinese / 中文  电路元件库手册 </a><br><br>
 <h2>
   Documentation resources
 </h2>
